--- a/templates/users.html
+++ b/templates/users.html
@@ -93,7 +93,7 @@
             </div>
             <div class="form-group">
                 <label for="editUserCPF">CPF</label>
-                <input type="text" id="editUserCPF" name="cpf" required disabled>
+                <input type="text" id="editUserCPF" name="cpf" required>
             </div>
             <div class="form-group">
                 <label for="editUserPhone">Phone</label>
